--- a/connect/src/main/res/values/styles.xml
+++ b/connect/src/main/res/values/styles.xml
@@ -10,6 +10,18 @@
         <item name="colorControlNormal">@android:color/black</item>
     </style>
 
+    <style name="Theme.EditProfile" parent="AppTheme.NoActionBar">
+        <item name="colorPrimary">@color/green_dark</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="colorAccent">@color/green_dark</item>
+    </style>
+
+    <style name="Theme.EditProfile.Hint" parent="Theme.EditProfile">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/green_dark</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="FlipButtonTheme" parent="Base.TextAppearance.AppCompat.Widget.Button">
         <item name="android:text">@string/login</item>
     </style>
